--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
-      MONGO_INITDB_DATABASE: magma_assessment
+      MONGO_INITDB_DATABASE: magma_assessment_db
     ports:
       - "27017:27017"
     volumes:
