Refatora integração com sdk's e ajusta dependências. Configura Program.cs. Últimas correções  após testes com swagger.

--- a/src/MagmaAssessment.API/appsettings.json
+++ b/src/MagmaAssessment.API/appsettings.json
@@ -9,21 +9,26 @@
     "Enterprise": "magma3teste",
     "ApiKey": ""
   },
+  "GoogleMaps": {
+    "ApiKey": "b2be80db-2e39-41e4-ba57-82bea2a5d10f"
+  },
+  "DocuSign": {
+    "BasePath": "https://demo.docusign.net/restapi",
+    "AccessToken": "a37871cb-b17a-4c63-beb8-b2f34077f852",
+    "AccountId": "0599acfe-9366-4ae5-8fc2-ece1bfe82c5d"
+  },
+  "MicrosoftGraph": {
+    "TenantId": "17b862b9-fd8a-4930-acfe-e967940839df",
+    "ClientId": "79b60539-bae0-4f06-8696-7978064de008",
+    "ClientSecret": "1dbfa537-3e9e-4918-b8f6-ab94531f6919"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AzureAd": {
-    "TenantId": "SEU_TENANT_ID",
-    "ClientId": "SEU_CLIENT_ID",
-    "ClientSecret": "SEU_CLIENT_SECRET"
-  },
-  "DocuSign": {
-  "BasePath": "https://demo.docusign.net/restapi",
-  "AccessToken": "seu_token_de_acesso",
-  "AccountId": "seu_account_id"
-  }
+  "AllowedHosts": "*"
 }
